# archforge

./: README.md  pyproject.toml
src/archforge/: __init__.py  cli.py  main.py
src/archforge/core/: __init__.py  capabilities.py  config.py  console.py  context.py  enums.py  filesystem.py  project.py  renderer.py  templates.py  uv_manager.py
src/archforge/generators/: __init__.py  module_generator.py  project_generator.py
src/archforge/templates/architectures/pragmatic/django/module/: schemas.py.j2  services.py.j2  urls.py.j2  views.py.j2
src/archforge/templates/architectures/pragmatic/django/module/tests/: test_{{ module_name }}.py.j2
src/archforge/templates/architectures/pragmatic/django/project/: .gitignore.j2  README.md.j2  manage.py.j2  pyproject.toml.j2
src/archforge/templates/architectures/pragmatic/django/project/_optional/docker/: Dockerfile.j2
src/archforge/templates/architectures/pragmatic/django/project/tests/: conftest.py.j2  test_health.py.j2
src/archforge/templates/architectures/pragmatic/fastapi/module/: __init__.py.j2  entities.py.j2  repositories.py.j2  routes.py.j2
src/archforge/templates/architectures/pragmatic/fastapi/module/tests/: test_{{ module_name }}.py.j2
src/archforge/templates/architectures/pragmatic/fastapi/project/: .gitignore.j2  README.md.j2  pyproject.toml.j2
src/archforge/templates/architectures/pragmatic/fastapi/project/tests/: conftest.py.j2  test_health.py.j2
src/archforge/wizard/: __init__.py  init_wizard.py  module_wizard.py
tests/: __init__.py  test_capabilities.py  test_config.py  test_context.py  test_generators.py  test_renderer.py  test_templates.py
(+16 files in other folders)
