[project]
name = "archforge"
version = "0.1.0"
description = "Opinionated architectural scaffolding CLI for Python projects"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Archforge Contributors" }]
keywords = ["cli", "scaffolding", "architecture", "fastapi", "django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "jinja2>=3.1",
    "questionary>=2.0",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
archforge = "archforge.cli:app"

[project.urls]
Homepage = "https://github.com/archforge/archforge"
Documentation = "https://github.com/archforge/archforge#readme"
Repository = "https://github.com/archforge/archforge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/archforge"]

[tool.hatch.build.targets.sdist]
only-include = ["src/archforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
